--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ opt_einsum==3.4.0
 optree==0.15.0
 packaging==25.0
 pandas==2.2.3
+pigpio==1.78
 pillow==11.2.1
 protobuf==5.29.4
 pygame==2.6.1
@@ -57,7 +58,9 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
 rich==14.0.0
+RPi.GPIO==0.7.1
 six==1.17.0
+smbus==1.1.post2
 stable_baselines3==2.6.0
 sympy==1.13.3
 tensorboard==2.19.0
